# data-pebbles-sdk

./: LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test.yml
src/data_pebbles/: __init__.py  sdk.py
src/data_pebbles/client/: __init__.py  client.py  errors.py  types.py
src/data_pebbles/client/models/: __init__.py  body_bronze_upload_version.py  body_gold_upload_version.py  body_raw_upload_version.py  body_silver_upload_version.py  body_upload_version_bronze_resource_id_versions_post.py  body_upload_version_bronze_source_id_versions_post.py  body_upload_version_gold_resource_id_versions_post.py  body_upload_version_gold_source_id_versions_post.py  body_upload_version_silver_resource_id_versions_post.py  body_upload_version_silver_source_id_versions_post.py  create_gold_resource_request.py  create_gold_source_request.py  create_project_request.py  create_project_response.py  create_resource_request.py  create_resource_response.py  create_silver_resource_request.py  create_silver_source_request.py  create_source_request.py  gold_lineage_response.py  gold_metadata_response.py  http_validation_error.py  lineage_response.py  message_response.py  metadata_response.py  project_response.py  schema_response.py  schema_response_data.py  schema_response_data_schema.py  silver_lineage_response.py  silver_metadata_response.py  update_gold_resource_request.py  update_gold_source_request.py  update_project_request.py  update_resource_request.py  update_silver_source_request.py  (+5 more)
test/: manual_tests.ipynb  test_sdk.py
tests/: test_sdk.py
(+99 files in other folders)
