[project]
name = "data-pebbles"
version = "0.0.4"
description = "A Python library for interacting with the open source data catalog Data Pebbles."
readme = "README.md"
authors = [
    { name = "Leon David Zipp", email = "leondavidzipp@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=24.2.0",
    "httpx>=0.27.0",
    "mlflow>=2.0.0",
    "polars>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
exclude = ["src/data_pebbles/client", ".venv", "**/__pycache__", "tests"]

[tool.mypy]
exclude = ["src/data_pebbles/client", ".venv", "**/__pycache__", "tests"]

[tool.ruff]
exclude = ["src/data_pebbles/client"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
